# ramulator2PuM

./: example.yaml  example_config.yaml  example_inst.trace  gem5_example.yaml  notes.txt
src/: main.cpp
src/base/: request.h
src/dram/: CMakeLists.txt  dram.h  node.h
src/dram/impl/: DDR4.cpp
src/dram/lambdas/: action.h  preq.h  rowhit.h  rowopen.h
src/dram_controller/: CMakeLists.txt
src/dram_controller/impl/: generic_dram_controller.cpp
src/dram_controller/impl/scheduler/: generic_scheduler.cpp
src/frontend/impl/external_wrapper/: gem5_frontend.cpp
src/frontend/impl/memory_trace/: readwrite_trace.cpp
src/memory_system/: CMakeLists.txt
